@@ -22,9 +22,13 @@ Version dev
     * itwp.album.tGenere - From Beta to Stable
     * tplckr - Create a template checker
     * tplckr.status - Add a status file for itwp
-    * tplckr.itwp.album.pTipo - Created
     * tplckr.itwp.album.pAnno - Created
     * tplckr.itwp.album.pGenere - Created
+    * tplckr.itwp.album.pTipo - Created
+    * tplckr.itwp.film.pAnnouscita - Created
+    * tplckr.itwp.film.pDurata - Created
+    * tplckr.itwp.film.pTipoaudio - Created
+    * tplckr.itwp.film.pTipocolore - Created
 
 Version 5.0 (11/03/2012)
     * itwp.operaarte add tMateriale
